--- a/AppTakeAway/app/src/main/res/layout/product_item.xml
+++ b/AppTakeAway/app/src/main/res/layout/product_item.xml
@@ -44,10 +44,12 @@
         <Button
             android:id="@+id/addButton"
             android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:text="+"
             android:textSize="18sp"
-            android:padding="0dp"
+            android:textColor="@android:color/white"
+            android:background="@drawable/rounded_addbutton_background"
+            android:padding="8dp"
             app:layout_constraintTop_toBottomOf="@id/productImage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
