--- a/AppTakeAway/app/src/main/res/layout/activity_cart.xml
+++ b/AppTakeAway/app/src/main/res/layout/activity_cart.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#E0E0E0"> <!-- Color de fondo gris claro -->
 
     <ImageButton
         android:id="@+id/backButton"
@@ -23,7 +24,8 @@
         app:layout_constraintBottom_toTopOf="@+id/totalTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backButton" />
+        app:layout_constraintTop_toBottomOf="@+id/backButton"
+        android:layout_marginBottom="16dp" /> <!-- Espacio entre la lista y el total -->
 
     <TextView
         android:id="@+id/totalTextView"
