--- a/AppTakeAway/app/src/main/res/layout/cart_item.xml
+++ b/AppTakeAway/app/src/main/res/layout/cart_item.xml
@@ -4,55 +4,86 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:background="@drawable/cart_item_background"
+    android:padding="16dp"
+    android:layout_marginBottom="8dp">
+
+    <ImageView
+        android:id="@+id/productImage"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="16dp" />
 
     <TextView
         android:id="@+id/productName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/productPrice"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:maxLines="2"
+        android:ellipsize="end"
+        app:layout_constraintStart_toEndOf="@id/productImage"
+        app:layout_constraintEnd_toStartOf="@id/checkBox"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="8dp" />
 
     <TextView
         android:id="@+id/productPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <Button
-        android:id="@+id/decrementButton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:text="&lt;"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@id/productName"
         app:layout_constraintTop_toBottomOf="@id/productName"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_marginTop="4dp" />
 
-    <TextView
-        android:id="@+id/quantityTextView"
+    <LinearLayout
+        android:id="@+id/quantityLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintStart_toEndOf="@id/decrementButton"
-        app:layout_constraintEnd_toStartOf="@id/incrementButton"
-        app:layout_constraintTop_toTopOf="@id/decrementButton"
-        app:layout_constraintBottom_toBottomOf="@id/decrementButton"/>
-
-    <Button
-        android:id="@+id/incrementButton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:text="&gt;"
-        android:textSize="18sp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/productName"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="8dp">
+
+        <Button
+            android:id="@+id/decrementButton"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:text="-"
+            android:textSize="18sp"
+            android:textColor="@android:color/white"
+            android:background="@drawable/rounded_cart_button_background"/>
+
+        <TextView
+            android:id="@+id/quantityTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:layout_marginHorizontal="8dp"
+            android:layout_gravity="center_vertical" />
+
+        <Button
+            android:id="@+id/incrementButton"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:text="+"
+            android:textSize="18sp"
+            android:textColor="@android:color/white"
+            android:background="@drawable/rounded_cart_button_background"/>
+
+    </LinearLayout>
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:button="@drawable/custom_checkbox" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
