--- a/AppTakeAway/app/src/main/res/layout/activity_cart.xml
+++ b/AppTakeAway/app/src/main/res/layout/activity_cart.xml
@@ -38,6 +38,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <Button
+        android:id="@+id/payButton"
+        android:layout_width="147dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginBottom="8dp"
+        android:background="#000000"
+        android:backgroundTint="#000000"
+        android:text="PAY"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
