--- a/AppTakeAway/app/src/main/res/layout/activity_main.xml
+++ b/AppTakeAway/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,30 @@
     android:layout_height="match_parent"
     android:background="#E0E0E0">
 
+    <!-- Icono de usuario a la izquierda de la barra de búsqueda -->
+
+
+    <ImageButton
+        android:id="@+id/userButton"
+        android:layout_width="44dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:adjustViewBounds="true"
+        android:background="@drawable/rounded_button_background"
+        android:contentDescription="Icono de usuario"
+        android:padding="8dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/user_icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/rounded_search_view_background"
         android:elevation="4dp"
@@ -20,9 +38,10 @@
         app:queryHint="Buscar productos..."
         app:queryBackground="@null"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/cartButton"/>
+        app:layout_constraintStart_toEndOf="@id/userButton"
+        app:layout_constraintEnd_toStartOf="@id/cartButton" />
 
+    <!-- Botón de carrito de compras -->
     <ImageButton
         android:id="@+id/cartButton"
         android:layout_width="48dp"
@@ -34,8 +53,9 @@
         app:layout_constraintTop_toTopOf="@id/searchView"
         app:layout_constraintBottom_toBottomOf="@id/searchView"
         app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="Carrito de compras"/>
+        android:contentDescription="Carrito de compras" />
 
+    <!-- RecyclerView para mostrar productos -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
@@ -48,6 +68,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- ProgressBar para cargar contenido -->
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
