--- a/AppTakeAway/app/src/main/res/layout/activity_initialscreen.xml
+++ b/AppTakeAway/app/src/main/res/layout/activity_initialscreen.xml
@@ -2,36 +2,43 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/background_gradient"
+    android:padding="16dp"
     android:gravity="center">
 
     <!-- Logo de la App -->
-    <ImageView
-        android:id="@+id/logoImageView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/logo_name"
-    android:layout_centerHorizontal="true"
-    android:layout_marginBottom="20dp"/>
-
-    <!-- Botón de Seguir Como Invitado -->
-    <Button
-        android:id="@+id/guestButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Continuar com a invitat"
-        android:layout_below="@id/registerButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"/>
+<ImageView
+android:id="@+id/logoImageView"
+android:layout_width="200dp"
+android:layout_height="200dp"
+android:src="@drawable/logo_name"
+android:layout_centerHorizontal="true"
+android:layout_marginBottom="40dp"/>
 
     <!-- Botón de Registrarse/Iniciar Sesión -->
-    <Button
-        android:id="@+id/registerButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Registrar-se / Iniciar sesió"
-        android:layout_below="@id/logoImageView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"/>
+<Button
+android:id="@+id/registerButton"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:text="Registrar-se / Iniciar sesión"
+android:textColor="@android:color/white"
+android:background="@drawable/button_background"
+    android:layout_marginBottom="20dp"
+    android:padding="16dp"
+    android:textSize="18sp"
+    android:layout_centerHorizontal="true"/>
 
-</RelativeLayout>
+    <!-- Botón de Seguir Como Invitado -->
+<Button
+android:id="@+id/guestButton"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:text="Continuar como invitado"
+android:textColor="@android:color/white"
+android:background="@drawable/button_background"
+    android:padding="16dp"
+    android:textSize="18sp"
+    android:layout_below="@id/registerButton"
+    android:layout_centerHorizontal="true"/>
+
+    </RelativeLayout>
