--- a/AppTakeAway/app/src/main/res/layout/activity_initialscreen.xml
+++ b/AppTakeAway/app/src/main/res/layout/activity_initialscreen.xml
@@ -1,44 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_gradient"
-    android:padding="16dp"
-    android:gravity="center">
+    android:background="#E0E0E0"
+    android:padding="16dp">
 
     <!-- Logo de la App -->
-<ImageView
-android:id="@+id/logoImageView"
-android:layout_width="200dp"
-android:layout_height="200dp"
-android:src="@drawable/logo_name"
-android:layout_centerHorizontal="true"
-android:layout_marginBottom="40dp"/>
+    <ImageView
+        android:id="@+id/logoImageView"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/logo_name"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/registerButton"
+        android:layout_marginBottom="40dp"/>
 
     <!-- Botón de Registrarse/Iniciar Sesión -->
-<Button
-android:id="@+id/registerButton"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:text="Registrar-se / Iniciar sesión"
-android:textColor="@android:color/white"
-android:background="@drawable/button_background"
-    android:layout_marginBottom="20dp"
+    <Button
+        android:id="@+id/registerButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Registrar-se / Iniciar sesión"
+        android:textColor="@android:color/white"
+        android:background="@drawable/button_background"
     android:padding="16dp"
     android:textSize="18sp"
-    android:layout_centerHorizontal="true"/>
+    app:layout_constraintTop_toBottomOf="@id/logoImageView"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    android:layout_marginBottom="20dp"/>
 
     <!-- Botón de Seguir Como Invitado -->
-<Button
-android:id="@+id/guestButton"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:text="Continuar como invitado"
-android:textColor="@android:color/white"
-android:background="@drawable/button_background"
+    <Button
+        android:id="@+id/guestButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Continuar como invitado"
+        android:textColor="@android:color/white"
+        android:background="@drawable/button_background"
     android:padding="16dp"
     android:textSize="18sp"
-    android:layout_below="@id/registerButton"
-    android:layout_centerHorizontal="true"/>
+    app:layout_constraintTop_toBottomOf="@id/registerButton"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"/>
 
-    </RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
