fusion pay and user

--- a/AppTakeAway/app/src/main/res/layout/activity_profile.xml
+++ b/AppTakeAway/app/src/main/res/layout/activity_profile.xml
@@ -2,7 +2,10 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#f5f5f5">
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,6 +15,18 @@
         android:background="@drawable/profile_background">
 
         <!-- Título del Perfil -->
+
+        <ImageButton
+            android:id="@+id/backButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Tornar enrere"
+            android:padding="16dp"
+            android:src="@drawable/ic_arrow_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
