--- a/AppTakeAway/app/src/main/res/layout/activity_order.xml
+++ b/AppTakeAway/app/src/main/res/layout/activity_order.xml
@@ -6,44 +6,11 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/idTextView"
+        android:id="@+id/ordersTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ID: "
-        android:textSize="18sp" />
+        android:textColor="#333333"
+        android:paddingTop="16dp"
+        android:textSize="16sp"/>
 
-    <TextView
-        android:id="@+id/totalTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Total: "
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/userIdTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="User ID: "
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/dateTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Fecha: "
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/statusTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Estado: "
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/payTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pagado: "
-        android:textSize="18sp" />
 </LinearLayout>
