--- a/AppTakeAway/app/src/main/res/layout/order_line_item.xml
+++ b/AppTakeAway/app/src/main/res/layout/order_line_item.xml
@@ -1,37 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:background="#DEDDDD"
+    android:backgroundTintMode="add"
+    android:orientation="horizontal"
     android:padding="8dp">
 
     <!-- Nombre del producto -->
-    <TextView
-        android:id="@+id/productNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nombre del producto"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:paddingBottom="4dp"/>
-    <TextView
-        android:id="@+id/productPrecioTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Precio del producto"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:paddingBottom="4dp"/>
-
     <ImageView
         android:id="@+id/productImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:paddingBottom="4dp"
         android:text="Imagen del producto"
-        android:textStyle="bold"
         android:textSize="16sp"
-        android:paddingBottom="4dp"/>
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/productNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="4dp"
+            android:text="Nombre del producto"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/productPrecioTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="4dp"
+            android:text="Precio del producto"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
 
 </LinearLayout>
